Set navbar z-index to prevent overlapping

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -25,6 +25,7 @@ $navbar-button-spacing-downsize: 60px;
   justify-content: center;
   transition: height 0.7s, background-color 0.7s;
   background-color: rgba(37, 37, 37, 0);
+  z-index: 1000;
   &.downsize {
     height: 6em;
     font-size: 0.4em;
